task5/tests/group/output/test12.out
lli: <stdin>:30:20: error: '%3' defined with type 'i8' but expected 'i32'
%t4 = add i32 %t5, %3
                   ^
